@@ -376,18 +376,18 @@ function lsx_post_nav() {
 		<div class="lsx-breaker"></div>
 
 		<div class="nav-links pager row">
-
-			<?php
-				$previous_post = get_previous_post_link( '%link', '<div class="previous col-md-6"><p class="nav-links-description">'._x( 'Previous Post', 'Previous post link', 'lsx' ).'</p><h3>%title</h3></div>' );
-				$previous_post = str_replace('<a','<a',$previous_post);
-				echo wp_kses_post( $previous_post );
-			?>
-			<?php
-				$next_post = get_next_post_link( '%link', '<div class="next col-md-6"><p class="nav-links-description">'._x( 'Next Post', 'Next post link', 'lsx' ).'</p><h3>%title</h3></div>' );
-				$next_post = str_replace('<a','<a',$next_post);
-				echo wp_kses_post( $next_post );
-			?>
-
+			<div class="previous col-md-6">
+				<?php
+					$previous_post = get_previous_post_link( '%link', '<p class="nav-links-description">'._x( 'Previous Post', 'Previous post link', 'lsx' ).'</p><h3>%title</h3>' );
+					echo wp_kses_post( $previous_post );
+				?>
+			</div>
+			<div class="next col-md-6">
+				<?php
+					$next_post = get_next_post_link( '%link', '<p class="nav-links-description">'._x( 'Next Post', 'Next post link', 'lsx' ).'</p><h3>%title</h3>' );
+					echo wp_kses_post( $next_post );
+				?>
+			</div>
 		</div><!-- .nav-links -->
 	</nav><!-- .navigation -->
 	<?php
