@@ -32,7 +32,7 @@ article .post-meta-link,
 article #comments .media-body,
 article #respond #commentform,
 
-.post-navigation .pager a div .nav-links-description,
+.post-navigation .pager div a .nav-links-description,
 body.single-post .wrap #primary #main>article #comments-collapse #respond #reply-title,
 
 .textwidget,
