@@ -6,6 +6,7 @@
 * Fix - Enabled compatibility between LSX Blog Customiser (display full content on blog pages) and LSX Theme
 * Fix - Enabled compatibility between LSX Blog Customiser (display grid layout on blog pages) and LSX Theme
 * Fix - Added a JavaScript option to avoid hide top menu on scroll
+* Fix - Adjusted the next/previous post navigation (wider columns)
 
 ### 1.8.1
 * Fix - Avoided use a return function inside the PHP function "empty" (compatibility with PHP 5.5 and lower)
